# ACAD

./: .gitignore  Cargo.toml  README.md  findings.md  progress.md  task_plan.md
crates/acad-cli/: Cargo.toml
crates/acad-cli/src/: main.rs
crates/brep-candle-train/: Cargo.toml  build.rs
crates/brep-candle-train/src/: lib.rs  main.rs
crates/brep-dataset/: Cargo.toml
crates/brep-dataset/src/: lib.rs
crates/brep-encoder/: Cargo.toml
crates/brep-encoder/src/: lib.rs
crates/brep-graph/: Cargo.toml
crates/brep-graph/src/: lib.rs
docs/: brep_dataset_v1.md  brep_graph_encoder_plan.md  dataset_harness_plan.md  fusion360_occt_cleaning.md  fusion_face_benchmark_20260715.md  fusion_face_segmentation_example_report.md  minimal_dataset_training_pipeline.md
scripts/: train_fusion_face_benchmark.py
tools/occt_cleaner/: CMakeLists.txt  README.md
tools/occt_cleaner/src/: main.cpp
