[workspace]
members = [
    "crates/acad-cli",
    "crates/brep-candle-train",
    "crates/brep-encoder",
    "crates/brep-graph",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
acad-brep-encoder = { path = "crates/brep-encoder" }
acad-brep-graph = { path = "crates/brep-graph" }
candle-core = "0.11.0"
candle-nn = "0.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
