[package]
name = "acad-brep-candle-train"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
acad-brep-encoder.workspace = true
acad-brep-graph.workspace = true
candle-core.workspace = true
candle-nn.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "brep-candle-train"
path = "src/main.rs"
